Dynamic pricing widget drag/click bug fix on Safari OS X

--- a/laterpay/asset_sources/scss/components/_dynamic_pricing.scss
+++ b/laterpay/asset_sources/scss/components/_dynamic_pricing.scss
@@ -148,6 +148,7 @@
 .lp_dynamic-pricing__start-price-value,
 .lp_dynamic-pricing__end-price-value {
     font-size: $fs--07;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 /*
